microc/tests/expected/err-funass3.uc.out
../examples/err-funass3.uc:[10:7]: semantic error: cannot assign to a function
      f = g; // error: assignment to a function
        ^

1
